--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -24,7 +24,7 @@
                     </div>
 
                     <div class="col-sm-12" ng-show="!Post.busy">
-                        <h2 class="text-center" ng-show="!Post.list.length">Lo sentimos no contamos con contenido
+                        <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos con contenido
                             disponible</h2>
                     </div>
                 </div>
