--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,38 +1,31 @@
-<section id="content-area">
+<section id="content-contact">
     <div class="container">
-        <div class="col-md-12 title-post">
-            <h2 class="title">Contacto</h2>
-        </div>
         <div class="form-section">
             <div class="container">
-                <div class="col-md-6">
+                <div class="col-md-6 col-md-offset-3 contact-section">
+                    <div class="col-md-12 title-post">
+                        <h2 class="title">Contacto</h2>
+                    </div>
+                    <br/><br/>
                     <div class="social-media">
 
                         <div class="social">
-                            <a href="tel:3535328566">
-                                <i class="fa fa-phone"></i> 01 353 532 85 66
+                            <a href="tel:3531281375">
+                                <i class="fa fa-phone"></i> 353 128 13 75
+                            </a>
+                        </div>
+                        <div class="social">
+                            <a href="tel:3531020871">
+                                <i class="fa fa-whatsapp"></i> 353 102 0871
                             </a>
                         </div>
                         <div class="social">
                             <a href="mailto:clientes@remolquesmagu.com">
-                                <i class="fa fa-envelope-o"></i> clientes@remolquesmagu.com
-                            </a>
-                        </div>
-                        <div class="social">
-                            <a href="#">
-                                <i class="fa fa-map-marker"></i> Amadeo Galvez 420, colonia
-                                Centro, Sahuayo Michoacán
-                            </a>
-                        </div>
-                        <div class="social">
-                            <a href="https://www.facebook.com/Remolques-y-Carrocerias-MAGU-157550077637501/?fref=ts"
-                               target="_blank">
-                                <i class="fa fa-facebook-square"></i> Facebook
+                                <i class="fa fa-envelope-o"></i> info@viveenarmonia.com.mx
                             </a>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 social-media" style="padding-top: 15px">
+
                     <form class="padding" method="post" ng-submit="contact.createNotification('CONTACT_FORM')">
                         <div class="form-group">
                             <label class="text-form" for="name">Nombre *</label>
@@ -57,7 +50,7 @@
                                           ng-model="contact.notification.message"></textarea>
                         </div>
                         <div class="pull-right">
-                            <button type="submit" class="btn-red">Enviar</button>
+                            <button type="submit" class="btn-orange">Enviar</button>
 
                         </div>
                     </form>
