--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -71,22 +71,197 @@
     </div>
 </section>
 
-<!-- recommendations -->
-<section id="recommendation" class="section_padding">
+<!-- recent works fraccionamientos -->
+<section id="recent-works" class="section_padding">
     <div class="container">
         <div class="title text-center">
-            <h1> Nuestros productos </h1>
+            <h1> Fraccionamientos </h1>
         </div>
-        <div class="owl-carousel owl-theme">
-            <div class="box-default" ng-repeat="product in Home.products" ng-repeat-owl-carousel
-                 carousel-init="Home.carouselInitializer" ng-if="product">
-                <div class="box-header item">
-                    <a ui-sref="product_detail({slug: product.slug})"> <img
-                            ng-src="{{ product.urlImages.medium }}" alt="{{ product.title }}"/></a>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="recent-work-wrap back-image">
+                <img class="img-responsive"
+                     src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
+                     alt="Restaurantes">
+
+                <div class="titles">
+                    <h3>Jardín real Mazamitla</h3>
+
+                    <p>Fraccionamiento Ubicado en Av. del Sol Col. el solecito, Sahuayo, Michoacán, Méx.</p>
                 </div>
-                <div class="box-container">
-                    <h1>{{ product.title }}</h1>
+
+                <div class="overlay">
+                    <div class="recent-work-inner top">
+                        <h3>Jardín real Mazamitla</h3>
+
+                        <a href="#" class="btn-white-clear">+ Información</a></div>
                 </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="recent-work-wrap back-image">
+                <img class="img-responsive"
+                     src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
+                     alt="Restaurantes">
+
+                <div class="titles">
+                    <h3>Jardín real Mazamitla</h3>
+
+                    <p>Fraccionamiento Ubicado en Av. del Sol Col. el solecito, Sahuayo, Michoacán, Méx.</p>
+                </div>
+
+                <div class="overlay">
+                    <div class="recent-work-inner top">
+                        <h3>Jardín real Mazamitla</h3>
+
+                        <a href="#" class="btn-white-clear">+ Información</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="recent-work-wrap back-image">
+                <img class="img-responsive"
+                     src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
+                     alt="Restaurantes">
+
+                <div class="titles">
+                    <h3>Jardín real Mazamitla</h3>
+
+                    <p>Fraccionamiento Ubicado en Av. del Sol Col. el solecito, Sahuayo, Michoacán, Méx.</p>
+                </div>
+
+                <div class="overlay">
+                    <div class="recent-work-inner top">
+                        <h3>Jardín real Mazamitla</h3>
+
+                        <a href="#" class="btn-white-clear">+ Información</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="parallax">
+    <div class="parallax__group">
+        <div class="parallax__layer parallax__layer--base">
+            <div id="contact" class="container section_padding">
+                <div class="text-center title">
+                    <h2>¿Por qué elegirnos ?</h2>
+
+                </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="row">
+                        <div class="contact text-center">
+                            <p>Adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                ullamco
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt
+
+                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                                dolor in reprehenderit in voluptate velit esse cillum. </p>
+                        </div>
+                        <div class="contact social-media">
+                            <a href="tel:3531281375"><i class="fa fa-phone"></i>
+                                01 353 128 13 75</a>
+                            <a href="tel:3531020871"><i class="fa fa-whatsapp"></i>
+                                353 102 0871</a>
+                            <a href="mailto:viveenarmonia.com.mx" style="font-size: 19px;"><i
+                                    class="fa fa-envelope"></i>
+                                info@viveenarmonia.com.mx</a>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- recent works fraccionamientos -->
+<section id="news" class="section_padding">
+    <div class="container">
+        <div class="title text-center">
+            <h1> Noticias </h1>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-3">
+            <div class="box-default">
+                <a href="#">
+                    <div class="box-header">
+                        <img class="img-responsive"
+                             src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
+                             alt="Restaurantes">
+                    </div>
+
+                    <div class="box-container">
+                        <h3>sed do eiusmod tempor</h3>
+
+                        <p>Adipiscing elit, sed do eiusmod tempor incididuntut labore...</p>
+                    </div>
+                    <div class="box-footer">
+                        <i class="fa fa-calendar"></i> 22/05/2016
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-3">
+            <div class="box-default">
+                <a href="#">
+                    <div class="box-header">
+                        <img class="img-responsive"
+                             src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
+                             alt="Restaurantes">
+                    </div>
+
+                    <div class="box-container">
+                        <h3>sed do eiusmod tempor</h3>
+
+                        <p>Adipiscing elit, sed do eiusmod tempor incididuntut labore...</p>
+                    </div>
+                    <div class="box-footer">
+                        <i class="fa fa-calendar"></i> 22/05/2016
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-3">
+            <div class="box-default">
+                <a href="#">
+                    <div class="box-header">
+                        <img class="img-responsive"
+                             src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
+                             alt="Restaurantes">
+                    </div>
+
+                    <div class="box-container">
+                        <h3>sed do eiusmod tempor</h3>
+
+                        <p>Adipiscing elit, sed do eiusmod tempor incididuntut labore...</p>
+                    </div>
+                    <div class="box-footer">
+                        <i class="fa fa-calendar"></i> 22/05/2016
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-3">
+            <div class="box-default">
+                <a href="#">
+                    <div class="box-header">
+                        <img class="img-responsive"
+                             src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
+                             alt="Restaurantes">
+                    </div>
+
+                    <div class="box-container">
+                        <h3>sed do eiusmod tempor</h3>
+
+                        <p>Adipiscing elit, sed do eiusmod tempor incididuntut labore...</p>
+                    </div>
+                    <div class="box-footer">
+                        <i class="fa fa-calendar"></i> 22/05/2016
+                    </div>
+                </a>
             </div>
         </div>
     </div>
