--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -36,13 +36,9 @@
     </div>
     <div class="box-body">
         <ul class="list-group">
-            <li class="list-group-item"><a href="#"> <i class="fa fa-map-marker"></i> Amadeo Galvez 420, colonia
-                Centro, Sahuayo Michoacán
-                C.P. 59000
-            </a></li>
-            <li class="list-group-item"><a href="mailto:clientes@remolquesmagu.com"><i class="fa fa-envelope"></i> clientes@remolquesmagu.com</a></li>
-            <li class="list-group-item"><a href="tel:013535328566"><i class="fa fa-phone"></i> 01 353 532 85 66</a></li>
-            <li class="list-group-item"><a href="https://www.facebook.com/Remolques-y-Carrocerias-MAGU-157550077637501/?fref=ts"><i class="fa fa-facebook-square"></i> Facebook</a></li>
+            <li class="list-group-item"><a href="mailto:info@viveenarmonia.com.mx"><i class="fa fa-envelope"></i> info@viveenarmonia.com.mx</a></li>
+            <li class="list-group-item"><a href="tel:3531281375"><i class="fa fa-phone"></i> 01 353 128 13 75</a></li>
+            <li class="list-group-item"><a href="tel:3531020871"><i class="fa fa-whatsapp"></i> 353 102 0871</a></li>
         </ul>
     </div>
 </div>
