--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -64,37 +64,112 @@
       height 100%
 
 
-@media only screen and (min-width: 481px) and (max-width: 640px)
-  .post-oustanding
-    padding 5px 0px
-    display inline-block
-    white-space nowrap
-    overflow hidden
-    text-overflow ellipsis
-    -o-text-overflow ellipsis
-    width 100%
+@media only screen and (min-width: 768px) and (max-width: 1024px)
+  .navbar-logo
+    display none
+    .logo-img
+      display none
 
-  .single_blog
-    .title-outstanding
-      font-size 16px !important
-      padding 20px 10px !important
-     h2
-      display inline-block
-      white-space nowrap
-      overflow hidden
-      text-overflow ellipsis
-      -o-text-overflow ellipsis
-      width 100%
-    p
-      font-size: 12px
-      margin-top: 5px
+  .navbar-header
+    float none
 
-    img
-      width 100%
-      height 100%
+  .navbar-toggle
+    display block
+    margin-top 3%
+
+  .navbar-collapse
+    border-top 1px solid transparent
+    box-shadow inset 0 1px 0 rgba(255,255,255,0.1)
+
+  .navbar-collapse.collapse
+    display none !important
+
+  .navbar-collapse.collapse.in
+    display block !important
+    border-top 0px solid white
+    border-color transparent
+
+  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
+    background orange
+
+  .navbar-default .navbar-toggle
+    border-color transparent
+
+  .navbar-nav
+    float none!important
+    margin 7.5px -15px
+
+  .navbar-nav>li
+    float none
+
+  .navbar-nav>li>a
+    padding-top 10px
+    padding-bottom 10px
+
+  .navbar-toggle .icon-bar
+    background white
+
+  .navbar-nav
+    background white
+    margin-top 30px
+
+  .carousel-inner > .item > img
+    height 600px
+
+  .carousel-inner
+    margin-top 100px
+
+  .carousel-caption .box-mail
+    margin -130px 20px 0
+
+  .recent-work-wrap
+    margin 5px
+
+  .recent-work-wrap > .titles
+    padding 35px 20px 10px
+
+  #product-detail .title-detail .content-title .title
+    text-align center
+
+  .recent-work-wrap
+    .titles
+      h3
+        font-size 18px
+
+  .box-sidebar .box-body .list-group a
+    color #777
+    word-break break-all
+
+  #contact-section
+    background-size cover
+    padding 30px 0
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .parallax .contact
+    padding 20px
+  
+  #product-detail
+    margin 0
+    .title-detail .content-title .title
+      padding-left 0
+      text-align center
+      margin-top 50px
+  .form-section
+    background transparent
+    padding 0
+    margin 60px 0px 25px
+
+  .navbar-default .navbar-toggle
+    border-color transparent
+  .carousel-caption .box-mail
+    display none
+  #contact-section
+    background-size cover
+    padding 30px 0
+    h3
+      text-align center
+      font-size 18px
   .widgets
     margin-top -35px
     clear both
@@ -113,7 +188,10 @@
     background white
     margin-top 30px
   header .navbar-default
-    background black
+    background white
+  header .logo
+    margin-top 15px
+    width 280px
   .navbar-fixed-top
     position relative
   h2.title-outstanding
