--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,43 +1,14 @@
 <div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="company_address">
-                <h2>Productos</h2>
-
-                <h3>
-                    <a class="footer-links" ng-repeat="item in mainNavMenu"
-                       ui-sref="category_product({slug: item.slug})">{{ item.name }}
-                        <br/></a>
-                </h3>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="company_address">
-                <h2>Información de contacto</h2>
-
-                <h3>
-                    <a class="footer-links"><i class="fa fa-map-marker"></i> Amadeo Galvez 420 colonia Centro
-                        Sahuayo Michoacán C.P. 59000</a><br/><br/>
-                    <a href="tel:3535328566" class="footer-links"><i class="fa fa-phone"></i> 01 353 532 85
-                        66</a><br/><br/>
-                    <a href="mailto:clientes@remolquesmagu.com" class="footer-links"> <i class="fa fa-envelope"></i>
-                        clientes@remolquesmagu.com</a>
-                </h3>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="company_address">
-                <h2><i class="fa fa-map-marker"></i> Ubicación</h2>
-
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3747.8610131352357!2d-102.71972298560834!3d20.056263525640112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842ee354c1bb5e37%3A0x7e773e492e6320de!2sAmadeo+G%C3%A1lvez%2C+Centro+Uno%2C+59000+Sahuayo+de+Morelos%2C+Mich.!5e0!3m2!1ses-419!2smx!4v1463769408199"
-                        width="100%" height="120" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-        </div>
+    <div class="text-center contact-footer">
+        <a href="tel:353 128 13 75"><i class="fa fa-phone"></i> 01 353 128 13 75</a> |
+        <a href="tel:353 128 13 75"><i class="fa fa-whatsapp"></i> 353 102 0871</a> |
+        <a href="mailto:contacto@viveenarmonia.com.mx"><i class="fa fa-envelope"></i> contacto@viveenarmonia.com.mx</a>
     </div>
-</div>
-<hr class="divider_footer"/>
-<div class="container">
-    <div class="text-center">
-        Diseño y desarrollo 2016 por <a class="footer-links" href="http://www.tingsystems.com/">Tingsystems</a>
+    <div class="text-center contact-footer">
+        <a href="#"> Aviso de privacidad</a> |
+        <a href="#"> Términos y condiciones</a>
     </div>
+    <p class="text-center text">
+        2016. Vida en Armonía ®. Todos los derechos reservados
+    </p>
 </div>
